# shortlink

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-12-15-153058-0000_init/: up.sql
backend/src/: main.rs  schema.rs  state.rs  utils.rs
backend/src/database/: connection.rs
backend/src/database/models/: url.rs
backend/src/routes/: handle_404.rs  mod.rs  root.rs
backend/src/routes/api/: mod.rs  ping.rs
frontend/: vite.config.ts
