[package]
name = "shortlink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tracing"] }
axum-extra = { version = "0.12.2", features = ["query"] }
clap = { version = "4.5.53", features = ["derive"] }
diesel = { version = "2.3.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
